# py-zerobyte

./: API_REFERENCE.md  CHECKLIST.md  INSTALL.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  TUTORIAL.md  pyproject.toml  quickstart.py  setup.py  swagger.json
examples/: README.md  basic_usage.py  create_backup_setup.py  manage_notifications.py  monitor_status.py  restore_snapshot.py
py-zerobyte/: __init__.py  backup_schedules.py  client.py  snapshots.py  volumes.py
py_zerobyte/: __init__.py  auth.py  exceptions.py  notifications.py  repositories.py  snapshots.py  system.py
tests/: test_client.py
