[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "py-zerobyte"
version = "1.2.1"
description = "Python SDK for Zerobyte API - Manage volumes, backups, and snapshots"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Tomer Klein", email = "tomer.klein@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.urls]
Homepage = "https://github.com/t0mer/py-zerobyte"
Repository = "https://github.com/t0mer/py-zerobyte"
